--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <section class="container-top">
         <img class="avatar" src="Assets/20210310_192100 (2)-removebg-preview.jpg">
         <h1 class="name">Ahmed Bassam</h1>
-        <h4> Student | Web Developer | Photographer</h4>
+        <h4> Student | Web Developer </h4>
         <button class="btn btn-primary">Hire me</button>
         <button class="btn btn-primary">Download CV</button> 
         <div class="logos">
@@ -57,8 +57,9 @@
     <div class="row">
         <div class="col col-lg-6 col-md-6 col-sm-12">
             <h1 > <i class="fas fa-address-card icon"></i> About</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Tempore natus laudantium voluptas facere ut error rerum? Pariatur recusandae modi inventore?</p>
+            <p>My name is Ahmed, I'm a 20 year old student in a computer science college.
+                Currently I'm pursuing a carreer in front-end web development.
+            </p>
         </div>
         <div class="col col-lg-6 col-md-6 col-sm-12"> 
             <h1><i class="fas fa-info-circle icon"></i> Basic information</h1>
