--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <button class="btn btn-primary">Download CV</button> 
         <div class="logos">
          <ul class="logo-ul">
-           <li class="logo-li" > <a class="logo-a" > <i class="fab fa-facebook-f logo"> </i> </a> </li>
+           <li class="logo-li" > <a class="logo-a" > <i class="fab fa-facebook-f logo shift-left"></i></a> </li>
            <li class="logo-li"> <a class="logo-a"> <i class="fab fa-twitter logo"></i> </a> </li>
-           <li class="logo-li"> <a class="logo-a"> <i class="fab fa-google-plus-g logo"> </i></a> </li>
+           <li class="logo-li"> <a class="logo-a"> <i class="fab fa-telegram-plane logo shift-left"></i></a> </li>
         </ul>
     </div>
 </section>
