--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <main>
 
 <section class="container-top">
-        <img class="avatar" src="Assets/20210310_192100 (2)-removebg-preview.jpg">
+        <img class="avatar" src="Assets/Avatar.jpeg">
         <h1 class="name">Ahmed Bassam</h1>
         <h4> Student | Web Developer </h4>
         <button class="btn btn-primary">Hire me</button>
