--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- FontAwesome for the icons -->
     <script src="https://kit.fontawesome.com/8b6fd05b4e.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <script src="Jquery/jquery-3.5.1.js"></script>
-    <link rel="stylesheet" href="Bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="stylesheet.css">
-    
-    
 
+    <!-- Popper JS -->
+    <script src="Popper JS/popper.js"></script>
+    <!-- Jquery -->
+    <script src="Jquery/jquery-3.5.1.js"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="Bootstrap/bootstrap.css">
+
+    <!-- My CSS -->
+    <link rel="stylesheet" href="stylesheet.css">
     <title>CV</title>
 </head>
 <body>
@@ -44,9 +50,9 @@
         <button class="btn btn-primary">Download CV</button> 
         <div class="logos">
          <ul class="logo-ul">
-           <li class="logo-li" > <a class="logo-a" > <i class="fab fa-facebook-f logo shift-left"></i></a> </li>
-           <li class="logo-li"> <a class="logo-a"> <i class="fab fa-twitter logo"></i> </a> </li>
-           <li class="logo-li"> <a class="logo-a"> <i class="fab fa-telegram-plane logo shift-left"></i></a> </li>
+           <li class="logo-li"> <a class="logo-a" data-toggle="tooltip" data-placement="top" title="My Facebook Page"> <i class="fab fa-facebook-f logo shift-left"></i></a> </li>
+           <li class="logo-li"> <a class="logo-a"  data-toggle="tooltip" data-placement="top" title="My Twitter Account"> <i class="fab fa-twitter logo"></i> </a> </li>
+           <li class="logo-li"> <a class="logo-a"  data-toggle="tooltip" data-placement="top" title="My Telegram Profile"> <i class="fab fa-telegram-plane logo shift-left"></i></a> </li>
         </ul>
     </div>
 </section>
